--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -8,7 +8,7 @@ on:
         required: true
         type: string
       release_title:
-        description: "Titre de la release, ex: AdvancedFriendlyFire v1.0.0"
+        description: "Titre de la release, ex: FACEITDamage v1.0.0"
         required: true
         type: string
       include_symbols:
@@ -109,6 +109,6 @@ jobs:
             collect/addons/counterstrikesharp/plugins/FACEITDamage/FACEITDamage.dll
             collect/README.md
             collect/addons/counterstrikesharp/configs/plugins/FACEITDamage/FACEITDamage.json
-            collect/advanced_friendlyfire-${{ inputs.tag_name }}.zip
+            collect/FACEITDamage-${{ inputs.tag_name }}.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
